name:                bindgen
version:             0.1.0.0
author:              Index Int
build-type:          Simple
cabal-version:       >=1.10

executable bindgen
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
               ,       optparse-applicative
               ,       language-c
  default-language:    Haskell2010
